<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spacebackgroundimage">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="71dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:checkedButton="@id/cardsbutton_8"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/cardsbutton_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_8_cards"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:typeface="monospace"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/cardsbutton_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_16_cards"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:typeface="monospace"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/cardsbutton_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/_24_cards"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            android:textStyle="italic|bold"
            android:typeface="monospace"
            android:checked="false"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="27dp"
        android:text="@string/how_many_cards"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="54dp"
        android:background="@color/colorPrimary"
        android:text="@string/go_back"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="294dp"
        android:layout_marginRight="294dp"
        android:layout_marginBottom="49dp"
        android:text="start"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</android.support.constraint.ConstraintLayout>